Restructured Resume classes to Resume dir for better accessibility & Added Swagger UI dep.